<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Generate Password</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="logo_text">AbelaNET</string>
    <string name="productions_text">Productions</string>
    <string name="copyright_text">Copyright 2012</string>
    <string name="about_line1">www.abelanet.com</string>
    <string name="about_line2">android.abelanet.com</string>
    <string name="about_line3">Dedicate to PHAZE 101</string>
    <string name="about_line4">Return To Coding</string>
    <string name="title_activity_about">About</string>

</resources>